# fme

./: '  .gitignore  AGENT.md  \  ]  _eval.py  a  a.md  a.py  attention.md  change  data_loader.design  design_reinit.md  e a.md  execution_log.txt  fabric_design.md  main.py  metric  note  notes  notes.md  ntoes  pyproject.toml  trainer.md
benchmark/: attention_mask.py  bert_10B.py  bert_1B.py  bert_2_5b.py  bert_2_5b_flax.py  bert_2_5b_flax_jitted.py  bert_2_5b_foldin.py  bert_2_5b_jitted.py  bert_flax_train.py  compare_init.py  eqx_dropout_hlo.txt  eqx_no_dropout_hlo.txt  flax_dropout_hlo.txt  flax_no_dropout.txt  save_hlo.py  stabhlo2.txt  train.py
deprecated/: _metrics.py  wallclock.py
design/: evalingmd  flex_attention  godput  summary  transforms
experimental/: interop.py  key_tracer.py
notes/: target.md
src/: __init__.py  _darray.py  _filter.py  _huggingface.py  _logger.py  _masking_utils.py  _metrics.py  _profiler.py  _register.py  _reinit.py  _trainer_module.py  _training.py  _utils.py  _wallclock.py  benchmarking_utils.py  filter.py  huggingface.py  logger.py  masking_utils.py  metrics.py  modeling_utils.py  module_utils.py  rngs.py  system_logger.py  training_utils.py  tree.py  utils.py
temp/: args_is_always_tuple.py  benchmark_masks.py  check_config.py  check_dropout_rates.py  check_fusion.py  check_hf_attention.py  check_hf_source.py  check_layer_types.py  check_position_ids.py  counting.py  cp.py  debug_attention.py  debug_inference_mode.py  debug_masks.py  debug_modernbert_layerwise.py  debug_modernbert_real_model.py  debug_position_ids_hf.py  (+66 more)
(+448 files in other folders)
