[project]
name = "modernizing-indo-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.19.1",
    "equinox>=0.13.0",
    "flax>=0.11.1",
    "grain>=0.2.12",
    "jax[tpu]>=0.7.1",
    "jaxtyping>=0.3.2",
    "optax>=0.2.5",
    "orbax>=0.1.9",
    "tqdm>=4.66.5",
    "transformers>=4.55.4",
]


[tool.ruff.lint]
fixable = ["I001", "F401", "UP"]
ignore = ["E402", "E721", "E731", "E741", "F722", "UP038", "E501"]
select = ["E", "F", "I001", "UP"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
order-by-type = false

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[dependency-groups]
dev = [
    "markupsafe==2.1.3",
    "pytest>=8.4.1",
    "torch>=2.8.0",
]

